--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <ul class="container work">
           <li class="work__img">
             <img
-              src="images/img-1.jpg"
+              src="images/img-1@1x.jpg"
               alt="praca na komputerze pisanie kodu"
               width="370"
               height="294"
@@ -154,7 +154,7 @@
           </li>
           <li class="work__img">
             <img
-              src="images/img-2.jpg"
+              src="images/img-2@1x.jpg"
               alt="praca na komputerze UI"
               width="370"
               height="294"
@@ -163,7 +163,7 @@
           </li>
           <li class="work__img">
             <img
-              src="images/img-3.jpg"
+              src="images/img-3@1x.jpg"
               alt="praca na komputerze grafik"
               width="370"
               height="294"
@@ -182,7 +182,7 @@
           <li class="team__item">
             <figure class="team__img">
               <img
-                src="images/team-img-1.jpg"
+                src="images/team-img-1@1x.jpg"
                 alt="John Doe product designer"
                 width="270"
                 height="260"
@@ -246,7 +246,7 @@
           <li class="team__item">
             <figure class="team__img">
               <img
-                src="images/team-img-2.jpg"
+                src="images/team-img-2@1x.jpg"
                 alt="John Doe frontend developer"
                 width="270"
                 height="260"
@@ -310,7 +310,7 @@
           <li class="team__item">
             <figure class="team__img">
               <img
-                src="images/team-img-3.jpg"
+                src="images/team-img-3@1x.jpg"
                 alt="John Doe marketing"
                 width="270"
                 height="260"
@@ -374,7 +374,7 @@
           <li class="team__item">
             <figure class="team__img">
               <img
-                src="images/team-img-4.jpg"
+                src="images/team-img-4@1x.jpg"
                 alt="John Doe UI designer"
                 width="270"
                 height="260"
