--- a/portfolio.html
+++ b/portfolio.html
@@ -119,7 +119,7 @@
                   </p>
                 </div>
                 <img
-                  src="images/img-8.jpg"
+                  src="images/img-8@1x.jpg"
                   alt="team members"
                   width="370"
                   height="294"
@@ -140,7 +140,7 @@
             >
               <figure class="grid__img grid__box">
                 <img
-                  src="images/img-9.jpg"
+                  src="images/img-9@1x.jpg"
                   alt="men play basketball"
                   width="370"
                   height="294"
@@ -169,7 +169,7 @@
             >
               <figure class="grid__img grid__box">
                 <img
-                  src="images/img-10.jpg"
+                  src="images/img-10@1x.jpg"
                   alt="the seafood restaurant logo"
                   width="370"
                   height="294"
@@ -198,7 +198,7 @@
             >
               <figure class="grid__img grid__box">
                 <img
-                  src="images/img-11.jpg"
+                  src="images/img-11@1x.jpg"
                   alt="headphones"
                   width="370"
                   height="294"
@@ -227,7 +227,7 @@
             >
               <figure class="grid__img grid__box">
                 <img
-                  src="images/img-12.jpg"
+                  src="images/img-12@1x.jpg"
                   alt="white and brown grid__boxes"
                   width="370"
                   height="294"
@@ -256,7 +256,7 @@
             >
               <figure class="grid__img grid__box">
                 <img
-                  src="images/img-13.jpg"
+                  src="images/img-13@1x.jpg"
                   alt="computer screen"
                   width="370"
                   height="294"
@@ -285,7 +285,7 @@
             >
               <figure class="grid__img grid__box">
                 <img
-                  src="images/img-14.jpg"
+                  src="images/img-14@1x.jpg"
                   alt="magazine"
                   width="370"
                   height="294"
@@ -314,7 +314,7 @@
             >
               <figure class="grid__img grid__box">
                 <img
-                  src="images/img-15.jpg"
+                  src="images/img-15@1x.jpg"
                   alt="badge"
                   width="370"
                   height="294"
@@ -343,7 +343,7 @@
             >
               <figure class="grid__img grid__box">
                 <img
-                  src="images/img-16.jpg"
+                  src="images/img-16@1x.jpg"
                   alt="hands type something on a laptop"
                   width="370"
                   height="294"
