--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <use href="./images/icons.svg#icon-clock-1"></use>
               </svg>
             </div>
-            <h5 class="lorem__headline">LOREM IPSUM</h5>
+            <h5 class="headline-h5 headline-h5--lorem">LOREM IPSUM</h5>
             <p class="lorem__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -117,7 +117,7 @@
                 <use href="./images/icons.svg#icon-diagram-1"></use>
               </svg>
             </div>
-            <h5 class="lorem__headline">LOREM IPSUM</h5>
+            <h5 class="headline-h5 headline-h5--lorem">LOREM IPSUM</h5>
             <p class="lorem__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -129,7 +129,7 @@
                 <use href="./images/icons.svg#icon-astronaut-1"></use>
               </svg>
             </div>
-            <h5 class="lorem__headline">LOREM IPSUM</h5>
+            <h5 class="headline-h5 headline-h5--lorem">LOREM IPSUM</h5>
             <p class="lorem__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -141,7 +141,9 @@
       <!-- WORK -->
 
       <section class="section">
-        <h2 class="container headline-h2">Czym się zajmujemy</h2>
+        <h2 class="container headline-h2 headline-h2--work">
+          Czym się zajmujemy
+        </h2>
         <ul class="container work">
           <li class="work__img">
             <img
@@ -182,10 +184,9 @@
           <li class="team__item">
             <figure class="team__img">
               <img
+                class="team__member"
                 src="images/team-img-1@1x.jpg"
                 alt="John Doe product designer"
-                width="270"
-                height="260"
               />
 
               <h4 class="headline-h4">John Doe</h4>
@@ -246,10 +247,9 @@
           <li class="team__item">
             <figure class="team__img">
               <img
+                class="team__member"
                 src="images/team-img-2@1x.jpg"
                 alt="John Doe frontend developer"
-                width="270"
-                height="260"
               />
 
               <h4 class="headline-h4">John Doe</h4>
@@ -310,10 +310,9 @@
           <li class="team__item">
             <figure class="team__img">
               <img
+                class="team__member"
                 src="images/team-img-3@1x.jpg"
                 alt="John Doe marketing"
-                width="270"
-                height="260"
               />
 
               <h4 class="headline-h4">John Doe</h4>
@@ -374,10 +373,9 @@
           <li class="team__item">
             <figure class="team__img">
               <img
+                class="team__member"
                 src="images/team-img-4@1x.jpg"
                 alt="John Doe UI designer"
-                width="270"
-                height="260"
               />
 
               <h4 class="headline-h4">John Doe</h4>
