--- a/index.html
+++ b/index.html
@@ -66,6 +66,19 @@
           </li>
         </ul>
       </div>
+      <button
+            class="header__mobile js-open-menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
+            <svg class="header__mobile-menu">
+              <use
+                xlink:href="./images/icons.svg#icon-mobile-menu"
+                width="24"
+                height="16"
+              ></use>
+            </svg>
+          </button>
     </header>
     <div class="header-bottomline"></div>
 
