--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Zadanie domowe 8 HTML/CSS" />
-    <title>Zadanie domowe #7</title>
+    <title>Zadanie domowe #8</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
@@ -66,19 +66,6 @@
           </li>
         </ul>
       </div>
-      <button
-            class="header__mobile js-open-menu"
-            aria-expanded="false"
-            aria-controls="mobile-menu"
-          >
-            <svg class="header__mobile-menu">
-              <use
-                xlink:href="./images/icons.svg#icon-mobile-menu"
-                width="24"
-                height="16"
-              ></use>
-            </svg>
-          </button>
     </header>
     <div class="header-bottomline"></div>
 
@@ -118,7 +105,7 @@
                 <use href="./images/icons.svg#icon-clock-1"></use>
               </svg>
             </div>
-            <h5 class="headline-h5 headline-h5--lorem">LOREM IPSUM</h5>
+            <h5 class="lorem__headline">LOREM IPSUM</h5>
             <p class="lorem__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -130,7 +117,7 @@
                 <use href="./images/icons.svg#icon-diagram-1"></use>
               </svg>
             </div>
-            <h5 class="headline-h5 headline-h5--lorem">LOREM IPSUM</h5>
+            <h5 class="lorem__headline">LOREM IPSUM</h5>
             <p class="lorem__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -142,7 +129,7 @@
                 <use href="./images/icons.svg#icon-astronaut-1"></use>
               </svg>
             </div>
-            <h5 class="headline-h5 headline-h5--lorem">LOREM IPSUM</h5>
+            <h5 class="lorem__headline">LOREM IPSUM</h5>
             <p class="lorem__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -154,13 +141,11 @@
       <!-- WORK -->
 
       <section class="section">
-        <h2 class="container headline-h2 headline-h2--work">
-          Czym się zajmujemy
-        </h2>
+        <h2 class="container headline-h2">Czym się zajmujemy</h2>
         <ul class="container work">
           <li class="work__img">
             <img
-              src="images/img-1@1x.jpg"
+              src="images/img-1.jpg"
               alt="praca na komputerze pisanie kodu"
               width="370"
               height="294"
@@ -169,7 +154,7 @@
           </li>
           <li class="work__img">
             <img
-              src="images/img-2@1x.jpg"
+              src="images/img-2.jpg"
               alt="praca na komputerze UI"
               width="370"
               height="294"
@@ -178,7 +163,7 @@
           </li>
           <li class="work__img">
             <img
-              src="images/img-3@1x.jpg"
+              src="images/img-3.jpg"
               alt="praca na komputerze grafik"
               width="370"
               height="294"
