--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <!-- WORK -->
 
       <section class="section">
-        <h2 class="container headline-h2">Czym się zajmujemy</h2>
+        <h2 class="container headline-h2 headline-h2--work">Czym się zajmujemy</h2>
         <ul class="container work">
           <li class="work__img">
             <img
