--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
         <h1 class="container banner__title">
           Efektywne rozwiązania <br />dla waszego biznesu
         </h1>
-        <button class="button button--banner" type="button" data-modal-open>
+        <p class="banner__button"><button class="button button--banner" type="button" data-modal-open>
           Zamów usługę
-        </button>
+        </button></p>
       </section>
 
       <!-- Lorem -->
