--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
         <h1 class="container banner__title">
           Efektywne rozwiązania <br />dla waszego biznesu
         </h1>
-        <p class="banner__button"><button class="button button--banner" type="button" data-modal-open>
-          Zamów usługę
-        </button></p>
+        <p class="banner__button">
+          <button class="button button--banner" type="button" data-modal-open>
+            Zamów usługę
+          </button>
+        </p>
       </section>
 
       <!-- Lorem -->
@@ -105,7 +107,7 @@
                 <use href="./images/icons.svg#icon-clock-1"></use>
               </svg>
             </div>
-            <h5 class="lorem__headline">LOREM IPSUM</h5>
+            <h5 class="headline-h5 headline-h5--lorem">LOREM IPSUM</h5>
             <p class="lorem__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -117,7 +119,7 @@
                 <use href="./images/icons.svg#icon-diagram-1"></use>
               </svg>
             </div>
-            <h5 class="lorem__headline">LOREM IPSUM</h5>
+            <h5 class="headline-h5 headline-h5--lorem">LOREM IPSUM</h5>
             <p class="lorem__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -129,7 +131,7 @@
                 <use href="./images/icons.svg#icon-astronaut-1"></use>
               </svg>
             </div>
-            <h5 class="lorem__headline">LOREM IPSUM</h5>
+            <h5 class="headline-h5 headline-h5--lorem">LOREM IPSUM</h5>
             <p class="lorem__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -141,7 +143,9 @@
       <!-- WORK -->
 
       <section class="section">
-        <h2 class="container headline-h2 headline-h2--work">Czym się zajmujemy</h2>
+        <h2 class="container headline-h2 headline-h2--work">
+          Czym się zajmujemy
+        </h2>
         <ul class="container work">
           <li class="work__img">
             <img
@@ -612,7 +616,6 @@
               <svg class="newsletter__icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-icon-send"></use>
               </svg>
-      
             </button>
           </form>
         </div>
