--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
       <section>
         <ul class="section container lorem">
-          <li>
+          <li class="lorem__item">
             <div class="lorem__icon">
               <svg class="antenna" width="70" height="70">
                 <use href="./images/icons.svg#icon-antenna-1"></use>
@@ -101,7 +101,7 @@
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
-          <li>
+          <li class="lorem__item">
             <div class="lorem__icon">
               <svg class="clock" width="70" height="70">
                 <use href="./images/icons.svg#icon-clock-1"></use>
@@ -113,7 +113,7 @@
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
-          <li>
+          <li class="lorem__item">
             <div class="lorem__icon">
               <svg class="diagram" width="70" height="70">
                 <use href="./images/icons.svg#icon-diagram-1"></use>
@@ -125,7 +125,7 @@
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
-          <li>
+          <li class="lorem__item">
             <div class="lorem__icon">
               <svg class="astronaut" width="70" height="70">
                 <use href="./images/icons.svg#icon-astronaut-1"></use>
