--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
             </li>
           </ul>
         </div>
-        <div>
+        <div class="footer__socials">
           <h5 class="headline-h5 headline-h5--footer">Dołącz do nas</h5>
           <ul class="socials socials--footer">
             <li>
