--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <ul class="container work">
           <li class="work__img">
             <img
-              src="images/img-1.jpg"
+              src="images/img-1@1x.jpg"
               alt="praca na komputerze pisanie kodu"
               width="370"
               height="294"
@@ -158,7 +158,7 @@
           </li>
           <li class="work__img">
             <img
-              src="images/img-2.jpg"
+              src="images/img-2@1x.jpg"
               alt="praca na komputerze UI"
               width="370"
               height="294"
@@ -167,7 +167,7 @@
           </li>
           <li class="work__img">
             <img
-              src="images/img-3.jpg"
+              src="images/img-3@1x.jpg"
               alt="praca na komputerze grafik"
               width="370"
               height="294"
