--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
             >
           </li>
         </ul>
+         <div class="button-container">
+          <button
+            class="mobile-menu-button js-open-menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
+            <svg class="icon-mobile-menu" width="40" height="40">
+              <use href="./images/icons.svg#icon-menu_24px"></use>
+            </svg>
+          </button>
+        </div>
       </div>
     </header>
     <div class="header-bottomline"></div>
