--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
             Zapisz się do newslettera
           </h5>
           <form class="newsletter__form">
-            <label for="user_mail"></label>
+            <label class="newsletter__label" for="user_mail"></label>
             <input
               class="newsletter__mail"
               type="email"
