team header container padding

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a class="logo logo--header" href="index.html"
           >Web<span>Studio</span>
         </a>
-        <nav>
+        <nav class="header__nav">
           <ul class="nav">
             <li>
               <a class="nav__link nav__link--active" href="index.html"
@@ -85,7 +85,7 @@
     <!-- Main headline & Button -->
 
     <main class="main">
-      <section class="container banner">
+      <section class=" banner">
         <h1 class="container banner__title">
           Efektywne rozwiązania <br />dla waszego biznesu
         </h1>
@@ -193,7 +193,7 @@
       <section class="section container team">
         <h2 class="headline-h2">Nasz zespół</h2>
 
-        <ul class="container team__list">
+        <ul class=" team__list">
           <li class="team__item">
             <figure class="team__img">
               <img
