--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
       <section class="section">
         <h2 class="headline-h2">Nasi klienci</h2>
         <ul class="container clients">
-          <li>
+          <li class="clients__item">
             <a
               href="#"
               target="_blank"
@@ -464,7 +464,7 @@
               </svg>
             </a>
           </li>
-          <li>
+          <li class="clients__item">
             <a
               href="#"
               target="_blank"
@@ -476,7 +476,7 @@
               </svg>
             </a>
           </li>
-          <li>
+          <li class="clients__item">
             <a
               href="#"
               target="_blank"
@@ -488,7 +488,7 @@
               </svg>
             </a>
           </li>
-          <li>
+          <li class="clients__item">
             <a
               href="#"
               target="_blank"
@@ -500,7 +500,7 @@
               </svg>
             </a>
           </li>
-          <li>
+          <li class="clients__item">
             <a
               href="#"
               target="_blank"
@@ -512,7 +512,7 @@
               </svg>
             </a>
           </li>
-          <li>
+          <li class="clients__item">
             <a
               href="#"
               target="_blank"
