--- a/index.html
+++ b/index.html
@@ -699,14 +699,14 @@
             <span class="checkbox__terms">
               Oświadczam iż akceptuję
               <a
-                class="checkbox__terms checkbox__terms--link"
+                class="checkbox__terms--link"
                 href="#"
                 rel="noreferrer noopener"
                 >Regulamin</a
               >
               i
               <a
-                class="checkbox__terms checkbox__terms--link"
+                class="checkbox__terms--link"
                 href="#"
                 rel="noreferrer noopener"
                 >Politykę Prywatności.</a
