--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
         <ul class="mobile-menu-contacts">
           <li><a class="mobile-link--tel" href="">+48 111 111 111</a></li>
           <li>
-            <a class="mobile-link" href="mailto:info@devstudio.com"
+            <a class="mobile-link--mail" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
