--- a/portfolio.html
+++ b/portfolio.html
@@ -63,6 +63,16 @@
             >
           </li>
         </ul>
+           <div class="button-container">
+          <button
+            class="mobile-menu-button js-open-menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
+            <svg class="icon-mobile-menu" width="40" height="40">
+              <use href="./images/icons.svg#icon-menu_24px"></use>
+            </svg>
+          </button>
       </div>
     </header>
     <div class="header-bottomline"></div>
@@ -470,5 +480,42 @@
         </div>
       </div>
     </footer>
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-close js-close-menu">
+        <svg width="18px" height="18px">
+          <use href="./images/icons.svg#icon-close_24px"></use>
+        </svg>
+      </button>
+      <ul class="mobile-menu-list">
+        <li><a href="" class="mobile-link">Agencja</a></li>
+        <li><a href="" class="mobile-link">Portfolio</a></li>
+        <li><a href="" class="mobile-link">Kontakt</a></li>
+      </ul>
+      <div>
+        <ul class="mobile-menu-contacts">
+          <li><a class="mobile-link--tel" href="">+48 111 111 111</a></li>
+          <li>
+            <a class="mobile-link--mail" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <ul class="mobile-menu__social-list">
+          <li><a class="mobile-menu__social-item" href="">Instagram</a></li>
+          <li><a class="mobile-menu__social-item" href="">Twitter</a></li>
+          <li><a class="mobile-menu__social-item" href="">Facebook</a></li>
+          <li>
+            <a class="mobile-menu__social-item--no-border" href="">LinkedIn</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
